devops/k8s/expense-workflow-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expense-workflow
  namespace: devops-ssd-assignment
  labels:
    app: expense-workflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expense-workflow
  template:
    metadata:
      labels:
        app: expense-workflow
    spec:
      containers:
        - name: app
          image: expense-workflow:38f25e6954e7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
