devops/k8s/expense-workflow-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expense-workflow-service
  labels:
    app: expense-workflow
spec:
  selector:
    app: expense-workflow
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
